--- a/kikirutas-web/package.json
+++ b/kikirutas-web/package.json
@@ -1,23 +1,24 @@
 {
   "name": "kikirutas-web",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --open"
   },
   "dependencies": {
-    "pinia": "^3.0.4",
-    "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "pinia": "^2.3.1",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue": "^5.2.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.1.7"
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.1"
   }
 }
