--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -1,1 +1,42 @@
 VITE_API_BASE=http://127.0.0.1:8000/api
+
+# Nombre de la app (solo para mostrar en UI si lo usas)
+VITE_APP_NAME="KikiRutas"
+
+# API del backend (con /api al final)
+VITE_API_BASE="http://127.0.0.1:8000/api"
+
+# URL pública del frontend (donde corre Vite)
+VITE_FRONTEND_URL="http://localhost:5173"
+
+# Opcionales útiles
+VITE_TOKEN_STORAGE_KEY="kikirutas_token"
+VITE_USER_STORAGE_KEY="kikirutas_user"
+VITE_TZ="America/Cancun"
+
+/// <reference types="vite/client" />
+
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
+
+MAIL_USERNAME=abrahamgutierrez289@gmail.com
+MAIL_PASSWORD=G7vpL9x@2qW!mZ4
+
+# Por ahora usa el mismo remitente para evitar DMARC
+MAIL_FROM_ADDRESS=abrahamgutierrez289@gmail.com
+MAIL_FROM_NAME="KikiRutas"
+
+QUEUE_CONNECTION=sync
+
+
+#Ejemplo de configuración para producción:
+#VITE_APP_NAME="KikiRutas"
+#VITE_API_BASE="https://api.tudominio.com/api"
+#VITE_FRONTEND_URL="https://app.tudominio.com"
+
+#VITE_TOKEN_STORAGE_KEY="kikirutas_token"
+#VITE_USER_STORAGE_KEY="kikirutas_user"
+#VITE_TZ="America/Cancun"
