--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -1,10 +1,10 @@
-VITE_API_BASE=http://127.0.0.1:8000/api
+# VITE_API_BASE=http://127.0.0.1:8000/api
 
 # Nombre de la app (solo para mostrar en UI si lo usas)
 VITE_APP_NAME="KikiRutas"
 
 # API del backend (con /api al final)
-VITE_API_BASE="http://127.0.0.1:8000/api"
+VITE_API_BASE="http://127.0.0.1:8000"
 
 # URL pública del frontend (donde corre Vite)
 VITE_FRONTEND_URL="http://localhost:5173"
@@ -37,6 +37,7 @@ QUEUE_CONNECTION=sync
 #VITE_API_BASE="https://api.tudominio.com/api"
 #VITE_FRONTEND_URL="https://app.tudominio.com"
 
-#VITE_TOKEN_STORAGE_KEY="kikirutas_token"
-#VITE_USER_STORAGE_KEY="kikirutas_user"
-#VITE_TZ="America/Cancun"
+VITE_TOKEN_STORAGE_KEY="kikirutas_token"
+VITE_USER_STORAGE_KEY="kikirutas_user"
+VITE_TZ="America/Cancun"
+VITE_ROLE_STORAGE_KEY="kikirutas_role"
