--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -4,7 +4,7 @@
 VITE_APP_NAME="KikiRutas"
 
 # API del backend (con /api al final)
-VITE_API_BASE="http://127.0.0.1:8000"
+VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
 # URL pública del frontend (donde corre Vite)
 VITE_FRONTEND_URL="http://localhost:5173"
@@ -13,9 +13,6 @@ VITE_FRONTEND_URL="http://localhost:5173"
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
 VITE_USER_STORAGE_KEY="kikirutas_user"
 VITE_TZ="America/Cancun"
-
-/// <reference types="vite/client" />
-
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
@@ -30,12 +27,6 @@ MAIL_FROM_ADDRESS=abrahamgutierrez289@gmail.com
 MAIL_FROM_NAME="KikiRutas"
 
 QUEUE_CONNECTION=sync
-
-
-#Ejemplo de configuración para producción:
-#VITE_APP_NAME="KikiRutas"
-#VITE_API_BASE="https://api.tudominio.com/api"
-#VITE_FRONTEND_URL="https://app.tudominio.com"
 
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
 VITE_USER_STORAGE_KEY="kikirutas_user"
