--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -6,8 +6,8 @@ VITE_APP_NAME="KikiRutas"
 # API del backend (con /api al final)
 VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
-# URL pública del frontend (donde corre Vite)
-VITE_FRONTEND_URL="http://localhost:5173"
+# URL pública del frontend
+VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
 
 # Opcionales útiles
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
@@ -28,7 +28,6 @@ MAIL_FROM_NAME="KikiRutas"
 
 QUEUE_CONNECTION=sync
 
-VITE_TOKEN_STORAGE_KEY="kikirutas_token"
 VITE_USER_STORAGE_KEY="kikirutas_user"
 VITE_TZ="America/Cancun"
 VITE_ROLE_STORAGE_KEY="kikirutas_role"
