--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -1,10 +1,10 @@
-# VITE_API_BASE=http://127.0.0.1:8000/api
+ VITE_API_BASE=http://127.0.0.1:8000/api
 
 # Nombre de la app (solo para mostrar en UI si lo usas)
 VITE_APP_NAME="KikiRutas"
 
 # API del backend (con /api al final)
-VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
+# VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
 # URL pública del frontend
 VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
