se añadieron alertas en el panel de pedidos del admin

--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -7,7 +7,7 @@ VITE_APP_NAME="KikiRutas"
 # VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
 # URL pública del frontend
-VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
+# VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
 
 # Opcionales útiles
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
