--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -1,30 +1,16 @@
- VITE_API_BASE=http://127.0.0.1:8000/api
-
-# Nombre de la app (solo para mostrar en UI si lo usas)
+# Nombre de la app
 VITE_APP_NAME="KikiRutas"
 
-# API del backend (con /api al final)
-# VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
+# API del backend
+VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
 # URL pública del frontend
-# VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
+VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx" 
 
 # Opcionales útiles
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
 VITE_USER_STORAGE_KEY="kikirutas_user"
 VITE_TZ="America/Cancun"
-
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_ENCRYPTION=tls
-
-MAIL_USERNAME=abrahamgutierrez289@gmail.com
-MAIL_PASSWORD=G7vpL9x@2qW!mZ4
-
-# Por ahora usa el mismo remitente para evitar DMARC
-MAIL_FROM_ADDRESS=abrahamgutierrez289@gmail.com
-MAIL_FROM_NAME="KikiRutas"
 
 QUEUE_CONNECTION=sync
 
