--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -2,10 +2,11 @@
 VITE_APP_NAME="KikiRutas"
 
 # API del backend
-VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
+# VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
 
 # URL pública del frontend
-VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx" 
+# VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
+VITE_FRONTEND_URL="http://localhost:5173" 
 
 # Opcionales útiles
 VITE_TOKEN_STORAGE_KEY="kikirutas_token"
