se arreglo de las sesiones de los usuarios con su información

--- a/kikirutas-web/.env
+++ b/kikirutas-web/.env
@@ -3,6 +3,7 @@ VITE_APP_NAME="KikiRutas"
 
 # API del backend
 # VITE_API_BASE="https://api.kikirutas.z-ideas.com.mx/api"
+VITE_API_BASE="http://localhost:127.0.0.1:8000/api" # Local
 
 # URL pública del frontend
 # VITE_FRONTEND_URL="https://kikirutas.z-ideas.com.mx"
