--- a/kikirutas-web/package.json
+++ b/kikirutas-web/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.13.2",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
